--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon index.js",
     "build:ui": "rm -rf build && cd ../notesapp_fe && npm run build --prod && cp -r build ../notesapp_be",
     "deploy": "git push heroku master",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibild && npm run deplot",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibild && npm run deploy",
     "logs:prod": "heroku logs --tail"
   },
   "repository": {
