--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "heroku": "https://sheltered-thicket-76122.herokuapp.com/",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.9",
     "morgan": "^1.10.0"
